crates/traits/tests/snapshots/snapshots__event_group_state_revalidated.snap
---
source: crates/traits/tests/snapshots.rs
expression: "GroupEvent::GroupStateRevalidated\n{ group_id: gid(), epoch: EpochId(1), revalidated_commit_id: mid(), }"
---
{
  "GroupStateRevalidated": {
    "group_id": [
      170,
      170,
      170,
      170
    ],
    "epoch": 1,
    "revalidated_commit_id": [
      187,
      187,
      187,
      187
    ]
  }
}
