crates/traits/tests/snapshots/snapshots__event_local_group_copy_restored.snap
---
source: crates/traits/tests/snapshots.rs
expression: "GroupEvent::LocalGroupCopyRestored { group_id: gid() }"
---
{
  "LocalGroupCopyRestored": {
    "group_id": [
      170,
      170,
      170,
      170
    ]
  }
}
