crates/traits/tests/snapshots/snapshots__event_local_group_copy_terminated.snap
---
source: crates/traits/tests/snapshots.rs
expression: "GroupEvent::LocalGroupCopyTerminated { group_id: gid(), voluntary: true }"
---
{
  "LocalGroupCopyTerminated": {
    "group_id": [
      170,
      170,
      170,
      170
    ],
    "voluntary": true
  }
}
