crates/traits/tests/snapshots/snapshots__event_message_received.snap
---
source: crates/traits/tests/snapshots.rs
assertion_line: 686
expression: "GroupEvent::MessageReceived\n{\n    group_id: gid(), message_id: mid(), epoch: EpochId(7), sender: mem_id(),\n    payload: b\"hi\".to_vec(), retention: None,\n}"
---
{
  "MessageReceived": {
    "group_id": [
      170,
      170,
      170,
      170
    ],
    "message_id": [
      187,
      187,
      187,
      187
    ],
    "sender": [
      97,
      108,
      105,
      99,
      101
    ],
    "epoch": 7,
    "payload": [
      104,
      105
    ]
  }
}
