crates/traits/tests/snapshots/snapshots__event_message_received_with_encrypted_media_secret.snap
---
source: crates/traits/tests/snapshots.rs
expression: with_media_secret
---
{
  "MessageReceived": {
    "group_id": [
      170,
      170,
      170,
      170
    ],
    "message_id": [
      187,
      187,
      187,
      187
    ],
    "sender": [
      97,
      108,
      105,
      99,
      101
    ],
    "epoch": 7,
    "payload": [
      104,
      105
    ],
    "encrypted_media_secret": [
      171,
      171,
      171,
      171
    ]
  }
}
